fixed sidebar gap

--- a/src/js/Views/Home/home.scss
+++ b/src/js/Views/Home/home.scss
@@ -31,9 +31,11 @@
     {
         position: fixed;
         width: 25%;
-        margin-top:0;
+        margin-top: 0;
         border-right: 1px solid rgba(0, 0, 0, 0.5);
         height: 100vh;
+        margin-top: -22px;
+        padding-top: 22px;
     }
 
     .main-content
@@ -48,10 +50,4 @@
     {
         margin-top: 0;
     }
-
-    //footer
-    //{
-    //    width: 75%;
-    //    margin-left: auto;
-    //}
 }
